Upgrade to MaterialUI 4, start using Box instead of class styling

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat&display=swap" rel="stylesheet">
 
     <meta name="theme-color" content="#000000" />
     <!--
